utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/CircularDependencyTask.ide
package valid

typedef configuration CircularDependencyTask {
    label "Some Configuration"

    backend task main depends peer1
    frontend task peer1
}
