utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencyTask.ide
package invalid

typedef configuration CircularDependencyTask {
    label "Some Configuration"

    frontend task main depends peer1
    backend task peer1 depends peer2
    backend task peer2 depends main
}
